--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "out"
+  command = "npm run build && cp -r public/* .next/export/"
+  publish = ".next/export"
 
 [[headers]]
   for = "/*"
