Fix missing images on production site
- Added asset copy script to build process
- Ensures all public folder assets are included in Next.js export
- Fixes broken images on /results page and throughout site

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build && cp -r public/* .next/export/"
+  command = "npm run build"
   publish = ".next/export"
 
 [[headers]]
