--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/generate-sitemap-nextjs.js && next build; node scripts/copy-assets.js",
+    "build": "node scripts/generate-sitemap-nextjs.js && next build && node scripts/copy-assets.js",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
